Project search app

--- a/index.html
+++ b/index.html
@@ -207,8 +207,39 @@
                 <div class="border"></div>
               </h2>
               <div class="s-m">
-                <!-- <a href="https://devduxaaron.github.io/PlatziVideo/" class="fab" target="blank">Project finished</a> -->
+                <a href="https://devduxaaron.github.io/PlatziVideo/" class="fab" target="blank">Project finished</a>
                 <a href="https://github.com/DevDuxAaron/platzivideo" class="fab" target="blank">Github repository</a>
+              </div>
+            </div>
+          </article>
+          <article class="project-card">
+            <div class="top-section">
+              <img src="./assets/projects/WikiMe.png" />
+              <div class="menuicon">
+                <span class="s1"></span>
+                <span class="s2"></span>
+              </div>
+              <div class="card-name">
+                <span>Batabit</span><br>
+                By Aaron
+              </div>
+            </div>
+            <div class="info-section">
+              <h2>
+                About
+                <div class="border"></div>
+              </h2>
+              <p>
+                Project developed within a Traversy media video. A web page to search in the wikipedia.
+                 This page was developed with mobile first pattern.
+              </p>
+              <h2>
+                Visit
+                <div class="border"></div>
+              </h2>
+              <div class="s-m">
+                <a href="https://devduxaaron.github.io/SearchApp/" class="fab" target="blank" disabled="disabled">Project finished</a>
+                <a href="https://github.com/DevDuxAaron/SearchApp" class="fab" target="blank">Github repository</a>
               </div>
             </div>
           </article>
