Correct some details on projects

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 <div class="border"></div>
               </h2>
               <div class="s-m">
-                <a href="https://devduxaaron.github.io/PlatziVideo/" class="fab" target="blank">Project finished</a>
+                <!-- <a href="https://devduxaaron.github.io/PlatziVideo/" class="fab" target="blank">Project finished</a> -->
                 <a href="https://github.com/DevDuxAaron/platzivideo" class="fab" target="blank">Github repository</a>
               </div>
             </div>
@@ -238,7 +238,7 @@
                 <div class="border"></div>
               </h2>
               <div class="s-m">
-                <a href="https://devduxaaron.github.io/SearchApp/" class="fab" target="blank" disabled="disabled">Project finished</a>
+                <!-- <a href="https://devduxaaron.github.io/SearchApp/" class="fab" target="blank" disabled="disabled">Project finished</a> -->
                 <a href="https://github.com/DevDuxAaron/SearchApp" class="fab" target="blank">Github repository</a>
               </div>
             </div>
