--- a/index.html
+++ b/index.html
@@ -146,6 +146,18 @@
             <h4 class="projecttitle">Mini projects Python</h4>
           </article>
 
+          <article class="project-card">
+            <a class="tooltip" href="https://devduxaaron.github.io/jumpgame/">
+              <span class="tooltiptext">Project Pacman Basic</span>
+              <i class="fab fa-jedi-order"></i>
+            </a>
+            <a class="tooltip" href="https://github.com/DevDuxAaron/pacman">
+              <span class="tooltiptext">Project Repository</span>
+              <i class="fab fa-github"></i>
+            </a>
+            <h4 class="projecttitle">Pacman Basic</h4>
+          </article>
+
         </div>
       </section>
     </main>
