Inicio section about

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 <body>
   <header class="header">
     <h1 class="header__home">
-      <a href="">AARON</a>
+      <a href="">AARON
+        <!-- TODO: -->
+        <!-- <img src="./assets/logo/1-removebg.png" alt=""> -->
+      </a>
     </h1>
     <nav class="header__sections">
       <ul>
@@ -79,16 +82,28 @@
         </a>
       </div>
     </section>
-    <section class="main__about"></section>
+    <section class="main__about">
+      <img src="" alt="" srcset="">
+      <div class="main__about__container">
+        <h4 class="main__about__subtitle">Seguridad</h4>
+        <h3 class="main__about__title">Diseñado para la seguridad</h3>
+        <div class="main__about__description">
+          <p class="main__about__description__text">Al igual que todos los Tesla, el Model Y está diseñado para ser el vehículo más seguro en su clase. Con un bajo centro de gravedad, estructura de carrocería rígida y grandes zonas de deformación proporcionan una protección sin comparación.</p>
+          <div class="btn-container">
+            <a class="btn-dark">CONTACT</a>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="main__projects"></section>
     <section class="main__contact"></section>
   </main>
   <footer class="footer">
     <ul>
-      <li class="footer__item">Tesla 2021</li>
-      <li class="footer__item">Privacy & Legal</li>
+      <li class="footer__item">Aaron 2021</li>
+      <li class="footer__item">About</li>
+      <li class="footer__item">Projects</li>
       <li class="footer__item">Contact</li>
-      <li class="footer__item">Careers</li>
     </ul>
   </footer>
 </body>
