--- a/index.html
+++ b/index.html
@@ -46,8 +46,26 @@
       </aside>
     </article>
   </section>
-  <section id="acerca" class="about">
-    <h2>Acerca</h2>
+  <section id="acerca" class="about section container full-lg-screen">
+    <article class="text-lg-right">
+      <aside class="text-center text-lg-right">
+        <h1>Aaron Joel</h1>
+        <h5>Student & Web Developer</h5>
+      </aside>
+      <p>Desde 2018 tengo experiencia en el área del desarrollo <i>web</i>.</p>
+      <p>También colaboro en proyectos como <i>Freelance Fullstack</i>. Estoy más orientado al <i>Frontend</i>, pero
+        también hago <i>Backend</i>.</p>
+      <p>Disfruto llevar a cabo la maquetación e interactividad de interfaces <i>web</i>, así como la optimización, para
+        el buen posicionamiento y el rendimiento de carga de sitios y aplicaciones <i>web</i>.</p>
+      <p>También cuento con concocimiento en el área de <i>Social Media</i>, <i>Marketing</i> de Contenidos y <i>SEO</i>.
+      </p>
+      <div class="text-center text-lg-left">
+        <a class="btn" href="https://jonmircha.com/jonmircha-cv.pdf" target="_blank" rel="noopener">DESCARGA MI CV</a>
+      </div>
+    </article>
+    <article>
+      <img class="gray-scale" src="./assets/aaronjoel.png" alt="Aaron Joel">
+    </article>
   </section>
   <section id="servicios" class="services">
     <h2>Servicios</h2>
