Two projects added

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <aside class="portfolio-card-info">
           <div>
             <h3>Hamburguesa</h3>
-            <p>Aplicación para crear una hamburguesa con la lógica <i>stack</i>.</p>
+            <p>Aplicación para crear un pedido de hamburguesa, pensado para la apicación en pedidos a n restaurant. La lógica <i>stack</i> utilizada permite la interactividad en la creación de la hamburguesa.</p>
           </div>
         </aside>
       </a>
@@ -185,7 +185,7 @@
         <aside class="portfolio-card-info">
           <div>
             <h3>Pacman</h3>
-            <p>Juego de pacaman, lógica diseñada en una matriz lineal. Sin estilos</p>
+            <p>Juego clasico de pacman, lógica diseñada en una matriz lineal. Sin estilos. Idea inspirada en el programa de Ania Kubow</p>
           </div>
         </aside>
       </a>
@@ -233,19 +233,19 @@
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M16.207,14.793l-1.414,1.414L12,13.414 l-2.793,2.793l-1.414-1.414L10.586,12L7.793,9.207l1.414-1.414L12,10.586l2.793-2.793l1.414,1.414L13.414,12L16.207,14.793z"/></svg>
       </a>
       <article class="portfolio-modal">
-        <img src="./assets/portfolio-1.jpg" alt="Trabajo 1">
+        <img src="./assets/hamburguer.png" alt="Hamburguesa">
         <div class="portfolio-info">
-          <h3>Project name</h3>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium maxime odio dolore magni architecto excepturi ipsum quia necessitatibus alias natus.</p>
+          <h3>Hamburguesa</h3>
+          <p>Aplicación para crear un pedido de hamburguesa, pensado para la apicación en pedidos a n restaurant. La lógica <i>stack</i> utilizada permite la interactividad en la creación de la hamburguesa.</p>
           <aside class="portfolio-details">
             <small><b>CLIENTE:</b></small>
             <small>Fulano de Tal</small>
             <small><b>FECHA:</b></small>
             <small>03/03/21</small>
             <small><b>TIPO:</b></small>
-            <small>Web page</small>
+            <small>Web app</small>
             <small><b>ENLACE:</b></small>
-            <small><a href="#" target="_blank" rel="noopener">Link al sitio.com</a></small>
+            <small><a href="https://devduxaaron.github.io/hamburguesa/" target="_blank" rel="noopener">App Hamburguesa</a></small>
           </aside>
         </div>
       </article>
@@ -257,19 +257,19 @@
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M16.207,14.793l-1.414,1.414L12,13.414 l-2.793,2.793l-1.414-1.414L10.586,12L7.793,9.207l1.414-1.414L12,10.586l2.793-2.793l1.414,1.414L13.414,12L16.207,14.793z"/></svg>
       </a>
       <article class="portfolio-modal">
-        <img src="./assets/portfolio-2.jpg" alt="Trabajo 2">
+        <img src="./assets/pacman.png" alt="Trabajo 2">
         <div class="portfolio-info">
-          <h3>Project name 2</h3>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium maxime odio dolore magni architecto excepturi ipsum quia necessitatibus alias natus.</p>
+          <h3>Pacman</h3>
+          <p>Juego clasico de pacman, lógica diseñada en una matriz lineal. Sin estilos. Idea inspirada en el programa de Ania Kubow</p>
           <aside class="portfolio-details">
             <small><b>CLIENTE:</b></small>
             <small>Fulano de Tal</small>
             <small><b>FECHA:</b></small>
             <small>03/03/21</small>
             <small><b>TIPO:</b></small>
-            <small>Web page</small>
+            <small>Game</small>
             <small><b>ENLACE:</b></small>
-            <small><a href="#" target="_blank" rel="noopener">Link al sitio.com</a></small>
+            <small><a href="https://devduxaaron.github.io/pacman/" target="_blank" rel="noopener">Pac-man game</a></small>
           </aside>
         </div>
       </article>
