--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" name="twitter:title" content="Portafolio CV - Aaron Joel">
   <meta property="og:description" name="twitter:description"
-    content="Hola bienvenid@ a mi Portafolio Profesional, soy Jonathan MirCha, Desarrollador Web">
+    content="Hola bienvenid@ a mi Portafolio Profesional, soy Aaron Joel, Desarrollador Web">
   <meta property="og:image" name="twitter:image"
     content="https://devduxaaron.github.io/assets/hero-image-home.jpg">
   <meta property="og:url" name="twitter:url"
