Blog Edition bug

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
             <small><b>TIPO:</b></small>
             <small>Tesis</small>
             <small><b>ENLACE:</b></small>
-            <small><a href="./docs/AnteproyectoFinal.pdf" target="_blank" rel="noopener">Leer completo</a></small>
+            <small><a href="./docs/AnteproyectoWeb.pdf" target="_blank" rel="noopener">Leer completo</a></small>
           </aside>
         </div>
       </article>
